repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__sitemaps__sitemap_index.snap
---
source: repology-webapp/tests/snapshot_tests/sitemaps.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: application/xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 399
---
<?xml version="1.0"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
<sitemap><loc>https://repology.org/sitemaps/main.xml</loc></sitemap>
<sitemap><loc>https://repology.org/sitemaps/repositories.xml</loc></sitemap>
<sitemap><loc>https://repology.org/sitemaps/maintainers.xml</loc></sitemap>
<sitemap><loc>https://repology.org/sitemaps/projects.xml</loc></sitemap>
</sitemapindex>
