repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__sitemaps__sitemap_projects.snap
---
source: repology-webapp/tests/snapshot_tests/sitemaps.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: application/xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors 'none'; base-uri 'none'; form-action 'self'
Header: x-frame-options: DENY
Header: referrer-policy: unsafe-url
Header: content-length: 206
---
<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
<url><loc>https://repology.org/project/foobar/versions</loc><changefreq>daily</changefreq></url>
</urlset>
